--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "three": "^0.176.0",
     "typescript": "^5.7.3",
     "vite": "^6.1.0",
+    "vite-plugin-glsl": "^1.3.0",
     "vite-plugin-top-level-await": "^1.4.4"
   }
 }
