--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "three-js-boilerplate-ts-vite",
+  "name": "3d-garden",
   "private": true,
   "version": "0.0.0",
   "type": "module",
